$Id$
Version 1.1.2 (?? ??? 2006)
 - Fixed bug [ 1608335 ] incomplete display of access.php (using UAC)
 - Fixed bug [ 1607603 ] Display description in printer day view no longer works
 - Fixed bug [ 1608365 ] default category should be suggested if adding any entries
 - Fixed bug [ 1608533 ] unable to use 'System Log' if not using 'top-menue'
 - Finished fixing bug [ 1600208 ] send_reminders.php and postgresql
 - Implemented RFE [ 1502773 ] Creator emails requested
 - Implemented RFE [ 1097294 ] Allow 'site_extra' fields to be included in emails
 - Implemented RFE [ 886520 ] Support for multiple selections in site_extras
 - Implemented RFE [ 1561653 ] Only a few site extras in the popup
 - Implemented RFE [ 1603169 ] Add checkbox option to site_extras
 - Fixed bug [ 1603599 ] color of definied-global-category will not be displayed as
 - Fixed bug [ 1601664 ] Spurious scheduling conflict
 - Fixed bug [ 1603582 ] bug at 'help_bug.php' missing language
 - Fixed bug [ 1603583 ] 'credits' at 'about.php' didn't work
 - Fixed bug [ 1603594 ] missing button label for choosing color at 'categories'
 - Made Priority conform to RFC2445 1-9 scale 1-highest, 9=lowest
 - Fixed bug [ 1601250 ] detail view of a layered events from upcomming.php doesn't
 - Fixed bug [ 1600914 ] Some tasks omitted from calendar display
 - Fixed bug [ 1600907 ] Small task list popup Due time is in GMT not local time
 - Fixed bug  [ 1600909 ] Cannot make weekend start on Sunday
 - Implemented Category Color RFE and PATCH ( many seperate entries )
 - Fixed bug [ 1600208 ] send_reminders.php and postgresql
 - Fixed bug [ 1599634 ] 'colors.php' doesn't work properly
 - Fixed bug [ 1600194 ] Minical dropping date in URL parsing
 - Implemented RFE [ 468275 ] a variable for background picture
 - Implemented RFE [ 765824 ] Start week on other days as well
 - Fixed bug [ 1578813 ] very compl. handling of UAC for selecting participant
 - Fixed bug [ 1598283 ] 'access.php' is shrinked in German