@@ -22,15 +22,14 @@ function selectUsers () {
     "width=500,height=500,resizable=yes,scrollbars=yes" );
 }
 
-function show(foo,f,section) {
-	document.getElementById(foo).style.display = "block";
-	if (f) { setCookie(foo, "o", section); }
-}
-
-function hide(foo,f, section) {
-	if (document.getElementById(foo)) {
-		document.getElementById(foo).style.display = "none";
-		if (f) { deleteCookie(foo, section); }
-	}
+function toggleDateRange () {
+  var i = document.searchformentry.date_filter.selectedIndex;
+  if ( i == 3 ) {
+    makeVisible ( "startDate" ); 
+    makeVisible ( "endDate" ); 
+  } else { 
+    makeInvisible ( "startDate"); 
+    makeInvisible ( "endDate" ); 
+  }
 }
 
